--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,7 @@
 cmake_minimum_required(VERSION 3.10)
 project(ALevelInterpreter)
 
-add_executable(ALevelInterpreter src/main.cpp)
+add_executable(ALevelInterpreter src/main.cpp
+        src/Reader.cpp
+
+)
