Added basic tokens

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,5 +5,7 @@ project(ALevelInterpreter)
 
 add_executable(ALevelInterpreter src/main.cpp
         src/Reader.cpp
+        src/Token.cpp
+        src/Token.h
 
 )
