--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,5 +7,7 @@ add_executable(ALevelInterpreter src/main.cpp
         src/Reader.cpp
         src/Token.cpp
         src/Token.h
+        src/Lexer.cpp
+        src/Lexer.h
 
 )
